# SDS-CP044-finresearch

./: .gitignore  requirements.txt
advanced/submissions/team-members/Amine KETTANI/: FinResearchAIStreamlit.py  finresearch_advanced.py
advanced/submissions/team-members/prateek-mulye/: MSFT_report.json  MSFT_report.md  NVDA_report.json  NVDA_report.md  Pipfile  app.py  main.py
advanced/submissions/team-members/prateek-mulye/src/: graph.py  state.py
advanced/submissions/team-members/prateek-mulye/src/agents/: reporter.py  researcher.py
advanced/submissions/team-members/prateek-mulye/tests/: test_flow.py  test_ui_logic.py
advanced/submissions/team-members/yan-cotta/: .dockerignore  Dockerfile  pyproject.toml  week2_agents.py
advanced/submissions/team-members/yan-cotta/src/agents/: __init__.py  base.py  manager.py  reporter.py  researcher.py
advanced/submissions/team-members/yan-cotta/src/config/: settings.py
advanced/submissions/team-members/yan-cotta/src/tools/: base.py  financial_data.py  memory.py
beginner/submissions/team-members/yan-cotta/01_hello_world/: demo_simple_agent.py
beginner/submissions/team-members/yan-cotta/02_tools_and_data/: week2_data_fetcher.py
